...

    override func viewDidLoad() {
        super.viewDidLoad()

        assert(coordinator != nil, "You must set a coordinator before presenting this view controller.")

        title = "Help"
        navigationItem.largeTitleDisplayMode = .never

        if UIDevice.current.userInterfaceIdiom == .pad {
            navigationItem.leftBarButtonItem = UIBarButtonItem(barButtonSystemItem: .done, target: self, action: #selector(doneTapped))
        }

        navigationItem.rightBarButtonItem = UIBarButtonItem(title: NSLocalizedString("Credits", comment: ""), style: .plain, target: self, action: #selector(showCredits))

        tableView.dataSource = dataSource
        tableView.delegate = dataSource
        dataSource.coordinator = coordinator
        dataSource.delegate = self

...
